[gd_scene load_steps=6 format=3 uid="uid://dgqwr0fbkpx5x"]

[ext_resource type="Theme" uid="uid://cypnnlojt3rfg" path="res://ui/battle_preparation/unit_detailed_info/unit_detailed_info.tres" id="1_oo1qq"]
[ext_resource type="Script" path="res://ui/battle_preparation/shop/shop_container.gd" id="2_4kdwl"]
[ext_resource type="PackedScene" uid="uid://uij42thge1m2" path="res://ui/battle_preparation/item_detailed_info/item_detailed_info.tscn" id="2_846yu"]
[ext_resource type="PackedScene" uid="uid://bp0ajjfrcs2dv" path="res://ui/battle_preparation/shop/tab_icon.tscn" id="3_mn3eq"]

[sub_resource type="Theme" id="Theme_jbtln"]
default_font_size = 24

[node name="ShopContainer" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_oo1qq")
script = ExtResource("2_4kdwl")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(562, 50)
layout_mode = 2

[node name="ShopHeaderLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_jbtln")
text = "Shop"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ItemDetailedInfo" parent="HBoxContainer" instance=ExtResource("2_846yu")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="SwordTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="AxeTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="LanceTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="BowTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="FistTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="StaffTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="DarkTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="LightTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="NatureTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="AnimalTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="MonsterTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="ShieldTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="DaggerTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="BannerTabIcon" parent="HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_mn3eq")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(302, 362)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
